# TortoiseTalk

./: README.md
FastDDS-Chat-Code/: FastDDSUser.exe - Shortcut.lnk  README.md
FastDDSFlutterRelease/: ip_list.txt
FastDDSFlutterRelease/ChatLogs/: Notes-2024-12-09
FlutterFastDDS/: .flutter-plugins  .flutter-plugins-dependencies  README.md  ip_list.txt  pubspec.yaml
FlutterFastDDS/.dart_tool/: package_config.json  package_config_subset
FlutterFastDDS/.dart_tool/flutter_build/3a280437248214cbee86ed85c9f479f1/: .filecache  aot_elf_release.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  kernel_snapshot.stamp  kernel_snapshot_native_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  native_assets.d  native_assets.stamp  release_bundle_windows-x64_assets.stamp  windows_aot_bundle.stamp  windows_engine_sources.d
FlutterFastDDS/.dart_tool/flutter_build/7c7a6cc3595c25962c56e6d010db2e21/: .filecache  debug_bundle_windows-x64_assets.stamp  kernel_snapshot.stamp  kernel_snapshot_native_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  native_assets.d  native_assets.stamp  outputs.json  unpack_windows.stamp  (+1 more)
FlutterFastDDS/lib/: CMakeLists.txt  main.dart
FlutterFastDDS/lib/hello_library/: CMakeLists copy.txt  CMakeLists.txt  hello.c  hello.cpp  hello.def  hello.h  hello.hpp  hello_library.sln
FlutterFastDDS/lib/src/: FastDDSChat.def  FastDDSUser.cpp  Globals.hpp  UserChatPublisher.hpp  UserChatSubscriber.hpp
FlutterFastDDS/windows/: CMakeLists.txt
FlutterFastDDS/windows/runner/: main.cpp
(+11 files in other folders)
